Texto objetivo estudo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,7 @@
     <div *ngIf="selectedContent === 'objetivo'" class="profile-container">
 
       <p> 
+        O objetivo deste estudo é aprender a integrar o frontend desenvolvido com Angular e PO UI com o banco de dados Progress (OpenEdge). Pretendo entender como conectar o Angular com o Progress para possibilitar a manipulação e visualização de dados de forma eficiente. Este processo inclui a configuração e implementação de uma comunicação fluida entre o frontend e o banco de dados, utilizando as melhores práticas para garantir uma integração robusta e eficiente.
      </p>
     </div>
   </po-page-default>
