--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,7 +62,7 @@
       9-Conecte o Angular a um backend, realizando chamadas HTTP para consumir APIs.
       Conexão com Banco de Dados<br>
       <br>
-      10Finalize o estudo integrando seu frontend com um banco de dados, usando o backend para consultas e manipulação de dados.
+      10-Finalize o estudo integrando seu frontend com um banco de dados, usando o backend para consultas e manipulação de dados.
       </p>
       </div>
   
