--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,4 +10,16 @@
   p {
     margin: 0;
   }
+  .profile-container {
+    display: flex;
+    align-items: center;
+  }
+  
+  .po-chart {
+    margin-right: 24px; /* Ajuste a margem conforme necessário */
+  }
+  
+  p {
+    margin: 0;
+  }
   
