apagando componente employee

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,6 +72,14 @@
         ></po-chart>
         Implementação do componente CHART<br>
       </div>
+
+      <div *ngIf="selectedContent === 'grafico'" class="profile-container">
+
+        
+      </div>
+
+      
+
   
 </po-page-default>
 </div>
